# HumanTouch

./: .dev.vars.example  .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  CLOUDFLARE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  PROGRESS.md  README.md  SECURITY.md  agent.md  next.config.ts  openapi.json  package-lock.json  package.json  project.md  test-api.js  test-async.js  tsconfig.json  vercel.json  vitest.config.ts  wrangler.toml
.claude/: settings.local.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: humanization-strategy.md
docs/api/: curl-examples.md  postman-collection.json  usage-guide.md
messages/: en.json  zh.json
sdk/javascript/: package.json  tsconfig.json
sdk/javascript/src/: index.ts
sdk/python/: pyproject.toml
sdk/python/src/humantouch/: __init__.py  client.py  exceptions.py  models.py
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/[locale]/: layout.tsx  page.tsx
src/app/api/v1/async/: route.ts
src/app/api/v1/auth/: route.ts
src/app/api/v1/batch/: route.ts
src/app/api/v1/process/: route.ts
src/app/api/v1/process/stream/: route.ts
src/app/api/v1/status/[taskId]/: route.ts
src/app/api/v1/tasks/: route.ts
src/app/api/v1/validate/: route.ts
src/components/: BatchProcessor.tsx  Dashboard.tsx  Header.tsx  Providers.tsx  TaskMonitor.tsx  TextProcessor.tsx
src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Loading.tsx  Select.tsx  Textarea.tsx
src/i18n/: request.ts
src/lib/: api-client.ts  api-client.tsx  auth.ts  cors.ts  detectors.ts  env.ts  llm-client.ts  logger.ts  moonshot.ts  taskqueue.ts  validation.ts
src/middleware/: ratelimit.ts
src/types/: api.ts
tests/: taskqueue.test.ts  test_python_sdk.py  validation.test.ts
workers/: index.ts  tsconfig.json
workers/lib/: auth.ts  detectors.ts  llm-client.ts  moonshot.ts
